--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -100,74 +100,8 @@
 											<li><a href="index-4.html">GDPR Cookie Bar</a></li>
 										</ul>
 									</li>
-									<li class="megamenu submenu">
-										<a href="javascript:void(0);" class="show-submenu-mega">Pages</a>
-										<div class="menu-wrapper">
-											<div class="row small-gutters">
-												<div class="col-lg-3">
-													<h3>Listing grid</h3>
-													<ul>
-														<li><a href="listing-grid-1-full.html">Grid Full Width</a></li>
-														<li><a href="listing-grid-2-full.html">Grid Full Width 2</a></li>
-														<li><a href="listing-grid-3.html">Grid Boxed</a></li>
-														<li><a href="listing-grid-4-sidebar-left.html">Grid Sidebar Left</a></li>
-														<li><a href="listing-grid-5-sidebar-right.html">Grid Sidebar Right</a></li>
-														<li><a href="listing-grid-6-sidebar-left.html">Grid Sidebar Left 2</a></li>
-														<li><a href="listing-grid-7-sidebar-right.html">Grid Sidebar Right 2</a></li>
-													</ul>
-												</div>
-												<div class="col-lg-3">
-													<h3>Listing row &amp; Product</h3>
-													<ul>
-														<li><a href="listing-row-1-sidebar-left.html">Row Sidebar Left</a></li>
-														<li><a href="listing-row-2-sidebar-right.html">Row Sidebar Right</a></li>
-														<li><a href="listing-row-3-sidebar-left.html">Row Sidebar Left 2</a></li>
-														<li><a href="listing-row-4-sidebar-extended.html">Row Sidebar Extended</a></li>
-														<li><a href="product-detail-1.html">Product Large Image</a></li>
-														<li><a href="product-detail-2.html">Product Carousel</a></li>
-														<li><a href="product-detail-3.html">Product Sticky Info</a></li>
-													</ul>
-												</div>
-												<div class="col-lg-3">
-													<h3>Other pages</h3>
-													<ul>
-														<li><a href="cart.html">Cart Page</a></li>
-														<li><a href="checkout.html">Check Out Page</a></li>
-														<li><a href="confirm.html">Confirm Purchase Page</a></li>
-														<li><a href="account.html">Create Account Page</a></li>
-														<li><a href="track-order.html">Track Order</a></li>
-														<li><a href="help.html">Help Page</a></li>
-														<li><a href="help-2.html">Help Page 2</a></li>
-														<li><a href="leave-review.html">Leave a Review</a></li>
-													</ul>
-												</div>
-												<div class="col-lg-3 d-xl-block d-lg-block d-md-none d-sm-none d-none">
-													<div class="banner_menu">
-														<a href="#0">
-															<img src="~/img/banner_menu.jpg" width="400" height="550" alt="" class="img-fluid lazy">
-														</a>
-													</div>
-												</div>
-											</div>
-											<!-- /row -->
-										</div>
-										<!-- /menu-wrapper -->
-									</li>
-									<li class="submenu">
-										<a href="javascript:void(0);" class="show-submenu">Extra Pages</a>
-										<ul>
-											<li><a href="header-2.html">Header Style 2</a></li>
-											<li><a href="header-3.html">Header Style 3</a></li>
-											<li><a href="header-4.html">Header Style 4</a></li>
-											<li><a href="header-5.html">Header Style 5</a></li>
-											<li><a href="404.html">404 Page</a></li>
-											<li><a href="sign-in-modal.html">Sign In Modal</a></li>
-											<li><a href="contacts.html">Contact Us</a></li>
-											<li><a href="about.html">About 1</a></li>
-											<li><a href="about-2.html">About 2</a></li>
-											<li><a href="modal-advertise.html">Modal Advertise</a></li>
-											<li><a href="modal-newsletter.html">Modal Newsletter</a></li>
-										</ul>
+									<li>
+										<a asp-controller="home" asp-action="products">Products</a>
 									</li>
 									<li>
 										<a href="blog.html">Blog</a>
@@ -216,19 +150,19 @@
 									<div class="dropdown dropdown-access">
 										<a href="account.html" class="access_link"><span>Account</span></a>
 										<div class="dropdown-menu">
-											<a href="account.html" class="btn_1">Sign In or Sign Up</a>
+											<a asp-controller="authentication" asp-action="signin" class="btn_1">Sign In or Sign Up</a>
 											<ul>
 												<li>
-													<a href="track-order.html"><i class="ti-truck"></i>Track your Order</a>
+													<a asp-controller="home" asp-action="trackorder"><i class="ti-truck"></i>Track your Order</a>
 												</li>
 												<li>
-													<a href="account.html"><i class="ti-package"></i>My Orders</a>
+													<a asp-controller="authentication" asp-action="signin"><i class="ti-package"></i>My Orders</a>
 												</li>
 												<li>
-													<a href="account.html"><i class="ti-user"></i>My Profile</a>
+													<a asp-controller="authentication" asp-action="signin"><i class="ti-user"></i>My Profile</a>
 												</li>
 												<li>
-													<a href="help.html"><i class="ti-help-alt"></i>Help and Faq</a>
+													<a asp-controller="home" asp-action="help"><i class="ti-help-alt"></i>Help and Faq</a>
 												</li>
 											</ul>
 										</div>
