--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
     <!-- Dashmix framework -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" id="css-main" href="~/admin/css/dashmix.css">
+    <link rel="stylesheet" href="~/admin/css/custom.css">
 
     @await RenderSectionAsync("Styles", required: false)
     <!-- END Stylesheets -->
