add crud colors

--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -109,6 +109,19 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="nav-main-heading">Properties</li>
+                        <li class="nav-main-item">
+                            <a class="nav-main-link" asp-controller="Categories" asp-action="Index">
+                                <i class="nav-main-link-icon fa fa-rocket"></i>
+                                <span class="nav-main-link-name">Categories</span>
+                            </a>
+                        </li
+                        <li class="nav-main-item">
+                            <a class="nav-main-link" asp-controller="Colors" asp-action="Index">
+                                <i class="nav-main-link-icon fa fa-rocket"></i>
+                                <span class="nav-main-link-name">Colors</span>
+                            </a>
+                        </li
                     </ul>
                 </div>
                 <!-- END Side Navigation -->
