--- a/Views/Authentication/Signin.cshtml
+++ b/Views/Authentication/Signin.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ShoeShop.ViewModels.Authentication;
+@model SigninViewModel
+@{
 	ViewData["Title"] = "Sign in";
 }
 
@@ -27,11 +29,21 @@
 							</div>
 						</div>
 						<div class="divider"><span>Or</span></div>
+						@if (TempData["Error"] != null)
+						{
+							<div class="col-md-12 alert alert-danger mt-3">
+								<span><b>Sorry!</b> - @TempData["Error"]</span>
+							</div>
+						}
 						<div class="form-group">
-							<input type="email" class="form-control" name="email" id="email" placeholder="Email*">
+							<label asp-for="EmailAddress" class="form-label"></label>
+							<input asp-for="EmailAddress" class="form-control" placeholder="abc@email.com">
+							<span asp-validation-for="EmailAddress" class="d-block text-danger mt-1"></span>
 						</div>
 						<div class="form-group">
-							<input type="password" class="form-control" name="password_in" id="password_in" value="" placeholder="Password*">
+							<label asp-for="Password" class="form-label"></label>
+							<input asp-for="Password" class="form-control" placeholder="************">
+							<span asp-validation-for="Password" class="d-block text-danger mt-1"></span>
 						</div>
 						<div class="clearfix add_bottom_15">
 							<div class="checkboxes float-start">
@@ -43,14 +55,8 @@
 							</div>
 							<div class="float-end"><a id="forgot" href="javascript:void(0);">Lost Password?</a></div>
 						</div>
+						<div class="text-muted text-center">Don't have an Account? <a href="page-signin.html">Sign up</a></div>
 						<div class="text-center"><input type="submit" value="Log In" class="btn_1 full-width"></div>
-						<div id="forgot_pw">
-							<div class="form-group">
-								<input type="email" class="form-control" name="email_forgot" id="email_forgot" placeholder="Type your email">
-							</div>
-							<p>A new password will be sent shortly.</p>
-							<div class="text-center"><input type="submit" value="Reset Password" class="btn_1"></div>
-						</div>
 					</div>
 					<!-- /form_container -->
 				</div>
