--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -1,3 +1,20 @@
 /*============================================================================================*/
 /* Your custom styles below */
 /*============================================================================================*/
+.field-validation-error {
+    width: 100%;
+    margin-top: .375rem;
+    font-size: .875rem;
+    color: #e04f1a !important;
+}
+
+
+.input-validation-error {
+    border-color: #fae5dd !important;
+    background-color: #fae5dd !important;
+}
+
+.input-validation-error:focus {
+    border-color: #e04f1a;
+    box-shadow: 0 0 0 0.25rem rgba(224, 79, 26, 0.25);
+}
