--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -112,13 +112,13 @@
                         <li class="nav-main-heading">Properties</li>
                         <li class="nav-main-item">
                             <a class="nav-main-link" asp-controller="Categories" asp-action="Index">
-                                <i class="nav-main-link-icon fa fa-rocket"></i>
+                                <i class="nav-main-link-icon fa fa-clone"></i>
                                 <span class="nav-main-link-name">Categories</span>
                             </a>
                         </li
                         <li class="nav-main-item">
                             <a class="nav-main-link" asp-controller="Colors" asp-action="Index">
-                                <i class="nav-main-link-icon fa fa-rocket"></i>
+                                <i class="nav-main-link-icon fa fa-bolt"></i>
                                 <span class="nav-main-link-name">Colors</span>
                             </a>
                         </li
