--- a/Views/Authentication/Signin.cshtml
+++ b/Views/Authentication/Signin.cshtml
@@ -55,7 +55,7 @@
 							</div>
 							<div class="float-end"><a id="forgot" href="javascript:void(0);">Lost Password?</a></div>
 						</div>
-						<div class="text-muted text-center mb-2">Don't have an Account? <a href="page-signin.html">Sign up</a></div>
+						<div class="text-muted text-center mb-2">Don't have an Account? <a asp-controller="authentication" asp-action="register">Sign up</a></div>
 						<div class="text-center"><input type="submit" value="Log In" class="btn_1 full-width"></div>
 					</form>
 					<!-- /form_container -->
