--- a/Views/Authentication/Signin.cshtml
+++ b/Views/Authentication/Signin.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ShoeShop.ViewModels.Authentication;
-@model SigninViewModel
+@model SigninViewModel;
 @{
 	ViewData["Title"] = "Sign in";
 }
