--- a/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/Areas/Admin/Views/Categories/Edit.cshtml
@@ -9,16 +9,16 @@
 <div class="bg-body-light">
     <div class="content content-full">
         <div class="d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-center">
-            <h1 class="flex-grow-1 fs-3 fw-semibold my-2 my-sm-3">Thêm danh mục</h1>
+            <h1 class="flex-grow-1 fs-3 fw-semibold my-2 my-sm-3">Edit Category</h1>
             <nav class="flex-shrink-0 my-2 my-sm-0 ms-sm-3" aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-alt">
                     <li class="breadcrumb-item">
                         <a href="javascript:void(0)">Dashboard</a>
                     </li>
                     <li class="breadcrumb-item">
-                        <a href="javascript:void(0)">Danh mục</a>
+                        <a href="javascript:void(0)">Categories</a>
                     </li>
-                    <li class="breadcrumb-item active" aria-current="page">Chỉnh sửa</li>
+                    <li class="breadcrumb-item active" aria-current="page">Edit</li>
                 </ol>
             </nav>
         </div>
