--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -52,7 +52,7 @@
 			<!-- /toolbox -->
 			
 			<div class="container margin_30">
-			
+		
 			<div class="row">
 				<aside class="col-lg-3" id="sidebar_fixed">
 				    <div class="filter_col">
@@ -194,228 +194,48 @@
 				<!-- /col -->
 				<div class="col-lg-9">
 					<div class="row small-gutters">
-						<div class="col-6 col-md-4">
-							<div class="grid_item">
-								<span class="ribbon off">-30%</span>
-								<figure>
-									<a href="product-detail-1.html">
-										<img class="img-fluid" src="~/img/products/shoes/1.jpg" alt="">
-									</a>
-									<div data-countdown="2019/05/15" class="countdown"></div>
-								</figure>
-								<a href="product-detail-1.html">
-									<h3>Armor Air x Fear</h3>
-								</a>
-								<div class="price_box">
-									<span class="new_price">$48.00</span>
-									<span class="old_price">$60.00</span>
-								</div>
-								<ul>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-								</ul>
-							</div>
-							<!-- /grid_item -->
-						</div>
-						<!-- /col -->
-
-						<div class="col-6 col-md-4">
-							<div class="grid_item">
-								<span class="ribbon off">-30%</span>
-								<figure>
-									<a href="product-detail-1.html">
-										<img class="img-fluid" src="~/img/products/shoes/2.jpg" alt="">
-									</a>
-									<div data-countdown="2019/05/10" class="countdown"></div>
-								</figure>
-								<a href="product-detail-1.html">
-									<h3>Armor Okwahn II</h3>
-								</a>
-								<div class="price_box">
-									<span class="new_price">$90.00</span>
-									<span class="old_price">$170.00</span>
-								</div>
-								<ul>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-								</ul>
-							</div>
-							<!-- /grid_item -->
-						</div>
-						<!-- /col -->
-
-						<div class="col-6 col-md-4">
-							<div class="grid_item">
-								<span class="ribbon off">-50%</span>
-								<figure>
-									<a href="product-detail-1.html">
-										<img class="img-fluid" src="~/img/products/shoes/3.jpg" alt="">
-									</a>
-									<div data-countdown="2019/05/21" class="countdown"></div>
-								</figure>
-								<a href="product-detail-1.html">
-									<h3>Armor Air Wildwood ACG</h3>
-								</a>
-								<div class="price_box">
-									<span class="new_price">$75.00</span>
-									<span class="old_price">$155.00</span>
-								</div>
-								<ul>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-								</ul>
-							</div>
-							<!-- /grid_item -->
-						</div>
-						<!-- /col -->
-
-						<div class="col-6 col-md-4">
-							<div class="grid_item">
-								<span class="ribbon new">New</span>
-								<figure>
-									<a href="product-detail-1.html">
-										<img class="img-fluid" src="~/img/products/shoes/4.jpg" alt="">
-									</a>
-								</figure>
-								<a href="product-detail-1.html">
-									<h3>Armor ACG React Terra</h3>
-								</a>
-								<div class="price_box">
-									<span class="new_price">$110.00</span>
-								</div>
-								<ul>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-								</ul>
-							</div>
-							<!-- /grid_item -->
-						</div>
-						<!-- /col -->
-
-						<div class="col-6 col-md-4">
-							<div class="grid_item">
-								<span class="ribbon new">New</span>
-								<figure>
-									<a href="product-detail-1.html">
-										<img class="img-fluid" src="~/img/products/shoes/5.jpg" alt="">
-									</a>
-								</figure>
-								<a href="product-detail-1.html">
-									<h3>Armor Air Zoom Alpha</h3>
-								</a>
-								<div class="price_box">
-									<span class="new_price">$140.00</span>
-								</div>
-								<ul>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-								</ul>
-							</div>
-							<!-- /grid_item -->
-						</div>
-						<!-- /col -->
-
-						<div class="col-6 col-md-4">
-							<div class="grid_item">
-								<span class="ribbon new">New</span>
-								<figure>
-									<a href="product-detail-1.html">
-										<img class="img-fluid" src="~/img/products/shoes/6.jpg" alt="">
-									</a>
-								</figure>
-								<a href="product-detail-1.html">
-									<h3>Armor Air Alpha</h3>
-								</a>
-								<div class="price_box">
-									<span class="new_price">$130.00</span>
-								</div>
-								<ul>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-								</ul>
-							</div>
-							<!-- /grid_item -->
-						</div>
-						<!-- /col -->
-
-						<div class="col-6 col-md-4">
-							<div class="grid_item">
-								<span class="ribbon hot">Hot</span>
-								<figure>
-									<a href="product-detail-1.html">
-										<img class="img-fluid" src="~/img/products/shoes/7.jpg" alt="">
-									</a>
-								</figure>
-								<a href="product-detail-1.html">
-									<h3>Armor Air 98</h3>
-								</a>
-								<div class="price_box">
-									<span class="new_price">$115.00</span>
-								</div>
-								<ul>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-								</ul>
-							</div>
-							<!-- /grid_item -->
-						</div>
-						<!-- /col -->
-
-						<div class="col-6 col-md-4">
-							<div class="grid_item">
-								<span class="ribbon hot">Hot</span>
-								<figure>
-									<a href="product-detail-1.html">
-										<img class="img-fluid" src="~/img/products/shoes/8.jpg" alt="">
-									</a>
-								</figure>
-								<a href="product-detail-1.html">
-									<h3>Armor Air 720</h3>
-								</a>
-								<div class="price_box">
-									<span class="new_price">$120.00</span>
-								</div>
-								<ul>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-								</ul>
-							</div>
-							<!-- /grid_item -->
-						</div>
-						<!-- /col -->
-						
-						<div class="col-6 col-md-4">
-							<div class="grid_item">
-								<span class="ribbon hot">Hot</span>
-								<figure>
-									<a href="product-detail-1.html">
-										<img class="img-fluid" src="~/img/products/shoes/9.jpg" alt="">
-									</a>
-								</figure>
-								<a href="product-detail-1.html">
-									<h3>Armor 720</h3>
-								</a>
-								<div class="price_box">
-									<span class="new_price">$100.00</span>
-								</div>
-								<ul>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-									<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-								</ul>
-							</div>
-							<!-- /grid_item -->
-						</div>
-						<!-- /col -->		
-						
+					@await Component.InvokeAsync("ShoeCards", new Shoe{
+						Name = "hoàng Gia Bảo",
+						ImageUrl = "1.jpg",
+						OldPrice = 62.21,
+						NewPrice = 40,
+						Description = "This is a sample shoe for testing."
+					})
+					@await Component.InvokeAsync("ShoeCards", new Shoe{
+					Name = "hoàng Gia Bảo",
+					ImageUrl = "1.jpg",
+					OldPrice = 62.21,
+					NewPrice = 40,
+					Description = "This is a sample shoe for testing."
+					})
+					@await Component.InvokeAsync("ShoeCards", new Shoe{
+					Name = "hoàng Gia Bảo",
+					ImageUrl = "1.jpg",
+					OldPrice = 62.21,
+					NewPrice = 40,
+					Description = "This is a sample shoe for testing."
+					})
+					@await Component.InvokeAsync("ShoeCards", new Shoe{
+					Name = "hoàng Gia Bảo",
+					ImageUrl = "1.jpg",
+					OldPrice = 62.21,
+					NewPrice = 40,
+					Description = "This is a sample shoe for testing."
+					})
+					@await Component.InvokeAsync("ShoeCards", new Shoe{
+					Name = "hoàng Gia Bảo",
+					ImageUrl = "1.jpg",
+					OldPrice = 62.21,
+					NewPrice = 40,
+					Description = "This is a sample shoe for testing."
+					})
+					@await Component.InvokeAsync("ShoeCards", new Shoe{
+					Name = "hoàng Gia Bảo",
+					ImageUrl = "1.jpg",
+					OldPrice = 62.21,
+					NewPrice = 40,
+					Description = "This is a sample shoe for testing."
+					})
 					</div>
 					<!-- /row -->
 					<div class="pagination__wrapper">
