add page brands

--- a/Areas/Admin/Views/Brands/Edit.cshtml
+++ b/Areas/Admin/Views/Brands/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model ShoeShop.Models.Category
+﻿@model ShoeShop.Models.Brand
 
 @{
-    ViewData["Title"] = "Edit Category";
+    ViewData["Title"] = "Edit Brand";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -9,14 +9,14 @@
 <div class="bg-body-light">
     <div class="content content-full">
         <div class="d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-center">
-            <h1 class="flex-grow-1 fs-3 fw-semibold my-2 my-sm-3">Edit Category</h1>
+            <h1 class="flex-grow-1 fs-3 fw-semibold my-2 my-sm-3">Edit Brand</h1>
             <nav class="flex-shrink-0 my-2 my-sm-0 ms-sm-3" aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-alt">
                     <li class="breadcrumb-item">
                         <a href="javascript:void(0)">Dashboard</a>
                     </li>
                     <li class="breadcrumb-item">
-                        <a href="javascript:void(0)">Categories</a>
+                        <a href="javascript:void(0)">Brands</a>
                     </li>
                     <li class="breadcrumb-item active" aria-current="page">Edit</li>
                 </ol>
