--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -115,7 +115,13 @@
                                 <i class="nav-main-link-icon fa fa-clone"></i>
                                 <span class="nav-main-link-name">Categories</span>
                             </a>
-                        </li
+                        </li>
+                        <li class="nav-main-item">
+                            <a class="nav-main-link" asp-controller="Brands" asp-action="Index">
+                                <i class="nav-main-link-icon fa fa-clone"></i>
+                                <span class="nav-main-link-name">Brands</span>
+                            </a>
+                        </li>
                         <li class="nav-main-item">
                             <a class="nav-main-link" asp-controller="Colors" asp-action="Index">
                                 <i class="nav-main-link-icon fa fa-bolt"></i>
