--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -118,7 +118,7 @@
 										<a href="blog.html">Blog</a>
 									</li>
 									<li>
-										<a href="#0">Buy Template</a>
+										<a href="/admin">Buy Template</a>
 									</li>
 								</ul>
 							</div>
