--- a/Areas/Admin/Views/Brands/Create.cshtml
+++ b/Areas/Admin/Views/Brands/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model ShoeShop.Models.Category
+﻿@model ShoeShop.Models.Brand
 
 @{
-    ViewData["Title"] = "Edit Category";
+    ViewData["Title"] = "Add Brand";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -9,16 +9,16 @@
 <div class="bg-body-light">
     <div class="content content-full">
         <div class="d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-center">
-            <h1 class="flex-grow-1 fs-3 fw-semibold my-2 my-sm-3">Edit Category</h1>
+            <h1 class="flex-grow-1 fs-3 fw-semibold my-2 my-sm-3">Add Brand</h1>
             <nav class="flex-shrink-0 my-2 my-sm-0 ms-sm-3" aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-alt">
                     <li class="breadcrumb-item">
                         <a href="javascript:void(0)">Dashboard</a>
                     </li>
                     <li class="breadcrumb-item">
-                        <a href="javascript:void(0)">Categories</a>
+                        <a href="javascript:void(0)">Brand</a>
                     </li>
-                    <li class="breadcrumb-item active" aria-current="page">Edit</li>
+                    <li class="breadcrumb-item active" aria-current="page">Add</li>
                 </ol>
             </nav>
         </div>
@@ -34,16 +34,15 @@
         <div class="block-content">
             <div class="row">
                 <div class="col-md-4 mx-auto py-3">
-                    <form asp-action="Edit">
+                    <form asp-action="Create">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <input type="hidden" asp-for="Id" />
                         <div class="form-group mb-2">
                             <label asp-for="Name" class="form-label"></label>
                             <input asp-for="Name" class="form-control form-control-alt" />
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Save" class="btn btn-primary" />
+                            <input type="submit" value="Create" class="btn btn-primary" />
                         </div>
                     </form>
                 </div>
