--- a/Areas/Admin/Views/Brands/Index.cshtml
+++ b/Areas/Admin/Views/Brands/Index.cshtml
@@ -1,25 +1,25 @@
-﻿@model IEnumerable<ShoeShop.Models.Color>
+﻿@model IEnumerable<ShoeShop.Models.Brand>
 
 @{
-    ViewData["Title"] = "Colors";
+    ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
 
 @section Styles {
     <link rel="stylesheet" href="~/admin/js/plugins/sweetalert2/sweetalert2.min.css">
 }
-
 <!-- Hero -->
 <div class="bg-body-light">
     <div class="content content-full">
         <div class="d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-center">
-            <h1 class="flex-grow-1 fs-3 fw-semibold my-2 my-sm-3">Colors</h1>
+            <h1 class="flex-grow-1 fs-3 fw-semibold my-2 my-sm-3">Brands</h1>
             <nav class="flex-shrink-0 my-2 my-sm-0 ms-sm-3" aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-alt">
                     <li class="breadcrumb-item">
                         <a href="javascript:void(0)">Dashboard</a>
                     </li>
-                    <li class="breadcrumb-item active" aria-current="page">Colors</li>
+                    <li class="breadcrumb-item active" aria-current="page">Brands</li>
                 </ol>
             </nav>
         </div>
@@ -27,11 +27,10 @@
 </div>
 <!-- END Hero -->
 
-
 <div class="content">
     <div class="block block-rounded">
         <div class="block-header block-header-default">
-            <h3 class="block-title">List Colors</h3>
+            <h3 class="block-title">List Brands</h3>
             <div class="block-options">
                 <a class="btn btn-hero btn-primary" asp-action="Create">
                     <i class="fa-regular fa-plus"></i> Add
@@ -87,28 +86,27 @@
             let trid = $(this).data("id");
             let result = await Swal.fire({
                 title: "Are you sure?",
-                text: "Would you like to delete this color?",
+                text: "Would you like to delete this category?",
                 icon: "warning",
                 showCancelButton: true,
-                confirmButtonText: "Yes, I'm sure!",
-                cancelButtonText: "Cancel"
+                confirmButtonText: "Yes, I'm sure",
+                cancelButtonText: "Cannel"
             });
 
             if (result.value) {
                 try {
-                    let response = await $.post(`./Colors/Delete/${trid}`);
+                    let response = await $.post(`./Brands/Delete/${trid}`);
                     if (response) {
-                        Swal.fire("Deleted!", "Successfully deleted the color.", "success");
+                        Swal.fire("Deleted!", "Successfully deleted the category.", "success");
                         $(this).closest('tr').remove();
                     } else {
-                        Swal.fire("Lỗi !", "Deletion of the color was not successful.", "error");
+                        Swal.fire("Lỗi !", "Deletion of the category was not successful.", "error");
                     }
                 } catch (error) {
                     console.error("Error:", error);
-                    Swal.fire("Lỗi !", "Deletion of the color was not successful.", "error");
+                    Swal.fire("Lỗi !", "Deletion of the category was not successful.", "error");
                 }
             }
         });
-
     </script>
 }
