add product detail

--- a/Views/Shared/Components/ShoeCards/Default.cshtml
+++ b/Views/Shared/Components/ShoeCards/Default.cshtml
@@ -3,7 +3,7 @@
 	<div class="grid_item">
 	<span class="ribbon off">-30%</span>
 	<figure>
-		<a href="product-detail-1.html">
+		<a asp-controller="Product" asp-action="Detail"  asp-route-id="1">
 			<img class="img-fluid" src="~/img/products/shoes/@Model.ImageUrl" alt="">
 		</a>
 		<div data-countdown="2019/05/15" class="countdown"></div>
