--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
 										</ul>
 									</li>
 									<li>
-										<a href="products">Products</a>
+										<a asp-controller="Product" asp-action="Index">Products</a>
 									</li>
 									<li>
 										<a href="blog.html">Blog</a>
