--- a/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/Areas/Admin/Views/Categories/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ShoeShop.Models.Category
 
 @{
-    ViewData["Title"] = "Edit Category";
+    ViewData["Title"] = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
