--- a/Areas/Admin/Views/Categories/Index.cshtml
+++ b/Areas/Admin/Views/Categories/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ShoeShop.Models.Category>
 
 @{
-    ViewData["Title"] = "Categories";
+    ViewData["Title"] = "Quản lý Categories";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 @section Styles {
