--- a/Areas/Admin/Views/Colors/Index.cshtml
+++ b/Areas/Admin/Views/Colors/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ShoeShop.Models.Color>
 
 @{
-    ViewData["Title"] = "Colors";
+    ViewData["Title"] = "Quản lý Colors";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
