--- a/Areas/Admin/Views/Colors/Create.cshtml
+++ b/Areas/Admin/Views/Colors/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ShoeShop.Models.Color
 
 @{
-    ViewData["Title"] = "Add Color";
+    ViewData["Title"] = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -9,16 +9,16 @@
 <div class="bg-body-light">
     <div class="content content-full">
         <div class="d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-center">
-            <h1 class="flex-grow-1 fs-3 fw-semibold my-2 my-sm-3">Add Color</h1>
+            <h1 class="flex-grow-1 fs-3 fw-semibold my-2 my-sm-3">Thêm danh mục</h1>
             <nav class="flex-shrink-0 my-2 my-sm-0 ms-sm-3" aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-alt">
                     <li class="breadcrumb-item">
                         <a href="javascript:void(0)">Dashboard</a>
                     </li>
                     <li class="breadcrumb-item">
-                        <a href="javascript:void(0)">Color</a>
+                        <a href="javascript:void(0)">Danh mục</a>
                     </li>
-                    <li class="breadcrumb-item active" aria-current="page">Add</li>
+                    <li class="breadcrumb-item active" aria-current="page">Thêm mới</li>
                 </ol>
             </nav>
         </div>
