--- a/Areas/Admin/Views/Colors/Edit.cshtml
+++ b/Areas/Admin/Views/Colors/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ShoeShop.Models.Color
 
 @{
-    ViewData["Title"] = "Edit Color";
+    ViewData["Title"] = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
