--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -112,13 +112,13 @@
 										</ul>
 									</li>
 									<li>
-										<a asp-controller="Product" asp-action="Index">Products</a>
+										<a href="products">Products</a>
 									</li>
 									<li>
 										<a href="blog.html">Blog</a>
 									</li>
 									<li>
-										<a href="/admin">Buy Template</a>
+										<a href="#0">Buy Template</a>
 									</li>
 								</ul>
 							</div>
